--- a/src/index.mustache
+++ b/src/index.mustache
@@ -3,15 +3,15 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta charset="utf-8">
-		<title>{{STORY_NAME}}</title>
+		<title>\{{STORY_NAME}}</title>
 	</head>
 	<body>
-		{{STORY_DATA}}
+		\{{STORY_DATA}}
 		<div id="tw-story">
 			<div id="tw-passage"></div>
 		</div>
 	</body>
 	<script type="text/javascript">
-		{{format_js}}
+		{{{format_js}}}
 	</script>
 </html>
