--- a/src/index.hbs
+++ b/src/index.hbs
@@ -3,6 +3,7 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta charset="utf-8">
+		<link rel="shortcut icon" href="#">
 		<title>\{{STORY_NAME}}</title>
 	</head>
 	<body>
