basic map functionality

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -11,6 +11,7 @@
 		<div id="tw-story">
 			<div id="tw-passage"></div>
 		</div>
+		<canvas id="map" width="300" height="300"></canvas>
 		<script type="text/javascript">
 			{{{format_js}}}
 		</script>
