--- a/src/index.hbs
+++ b/src/index.hbs
@@ -27,7 +27,7 @@
 					</div>
 					<hr />
 					<div class="map">
-						<canvas id="map" width="300" height="300"></canvas>
+						<canvas id="map"></canvas>
 					</div>
 				</div>
 			</div>
