--- a/src/index.hbs
+++ b/src/index.hbs
@@ -20,10 +20,10 @@
 					<div class="buttons"></div>
 					<hr />
 					<div class="directionals">
-						<button class="north">↑</button>
-						<button class="west">←</button>
-						<button class="east">→</button>
-						<button class="south">↓</button>
+						<button class="north" disabled>↑</button>
+						<button class="west" disabled>←</button>
+						<button class="east" disabled>→</button>
+						<button class="south" disabled>↓</button>
 					</div>
 					<hr />
 					<div class="map">
