--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,4 +1,5 @@
 $mobile_bp: 950px;
+$max_width: 1080px;
 
 :root {
 	--background: #222;
@@ -42,6 +43,8 @@ a {
 	gap: 4em;
 	justify-content: center;
 	grid-template-columns: repeat(12, 1fr);
+	max-width: $max_width;
+	margin: 0 auto;
 
 	@media screen and (max-width: $mobile_bp) {
 		grid-template-columns: 1fr;
