disable empty button

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -131,10 +131,6 @@ a {
 		box-shadow: 0 0 2px var(--accent1), 0 0 2px inset var(--accent1);
 		text-shadow: 0 0 1px currentColor;
 
-		&[data-passage-name="empty"] {
-			opacity: 0;
-		}
-
 		&:hover:not(:disabled) {
 			background-color: var(--accent1);
 			color: var(--textDark);
@@ -146,6 +142,11 @@ a {
 			color: var(--disabled);
 			opacity: 0.5;
 			cursor: not-allowed;
+		}
+
+		&[data-passage-name="empty"] {
+			opacity: 0;
+			pointer-events: none;
 		}
 
 		&.north {
