No auto title bar set

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -11,11 +11,11 @@
 		\{{STORY_DATA}}
 		<div id="interface">
 			<div id="tw-story" class="window">
-				<div class="titlebar"></div>
+				<div class="titlebar">HyperTear MR</div>
 				<div id="tw-passage" class="content"></div>
 			</div>
 			<div class="window" id="tw-input">
-				<div class="titlebar">Input Window</div>
+				<div class="titlebar">Nav</div>
 				<div class="content">
 					<div class="buttons"></div>
 					<hr />
