--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,167 +1,129 @@
-$mobile_bp: 950px;
-$max_width: 1080px;
-
 :root {
-	--background: #222;
+	--background: #111;
+	--backgroundDest: #2d0226;
+	--bg_gradient: linear-gradient(
+		to bottom,
+		var(--background) 80%,
+		var(--backgroundDest) 100%
+	);
 	--text: #ddd;
-	--textDark: #111;
-	--accent1: #ffd700;
-	--accent1bright: #ffa900;
-	--accent1dim: #c8a937;
-	--disabled: #ccc;
-	--accent1fade: rgba(255, 215, 0, 0.4);
-	--textShadowDepth: 1px;
+	--disabled: #aaa;
+
+	// accent colors
+	--accent_main: #a7078c;
+	--accent_main_fade: rgba(167, 7, 140, 0.4);
+
+	// fonts
+	--font: sans-serif;
 }
 
 body,
 html {
 	margin: 0;
 	padding: 0;
+	width: 100%;
+	height: 100%;
 }
 
 body {
-	background-color: var(--background);
+	background-image: var(--bg_gradient);
 	color: var(--text);
-	font-family: monospace;
+	font-family: var(--font);
 	font-size: 16px;
-	text-shadow: 0 0 var(--textShadowDepth) currentColor;
+	display: flex;
+	align-items: center;
 }
 
 a {
-	color: var(--accent1bright);
+	color: var(--accent_main);
 	font-weight: bold;
+}
 
-	&:visited {
-		color: var(--accent1dim);
+button {
+	background-color: var(--background);
+	color: var(--accent_main);
+	border: solid 1px var(--accent_main);
+	padding: 0.5rem 1.5rem;
+	font-family: var(--font);
+
+	&:hover:not(:disabled) {
+		background-color: var(--accent_main);
+		color: var(--background);
+		cursor: pointer;
 	}
 
-	&:hover {
-		color: var(--accent1bright);
+	&:disabled {
+		border-color: var(--disabled);
+		color: var(--disabled);
+		cursor: not-allowed;
+	}
+
+	&[data-passage-name="empty"] {
+		opacity: 0;
+		pointer-events: none;
 	}
 }
 
 #interface {
+	width: 100%;
 	padding: 4em;
-	display: grid;
-	gap: 4em;
-	justify-content: center;
-	grid-template-columns: repeat(12, 1fr);
-	max-width: $max_width;
-	margin: 0 auto;
+	position: relative;
+	min-height: 10rem;
 
-	@media screen and (max-width: $mobile_bp) {
-		grid-template-columns: 1fr;
-		gap: 1em;
+	&:before,
+	&:after {
+		--dist: 13px;
+
+		display: block;
+		content: " ";
+		position: absolute;
+		top: calc(var(--dist) * -1);
+		left: 0;
+		width: 100%;
+		height: 3px;
+		background-color: var(--accent_main);
+		z-index: 0;
+	}
+
+	&:after {
+		top: calc(100% + var(--dist));
 	}
 }
 
-.window {
-	padding-top: 0;
-	border: solid 1px var(--accent1);
-	box-shadow: 0 0 10px var(--accent1fade), 0 0 10px inset var(--accent1fade);
+.float-ui {
+	position: absolute;
+	bottom: 0;
+	transform: translateY(50%);
+	z-index: 1;
+	border: solid 1px var(--accent_main);
+	background-color: var(--background);
+	padding: 0.75rem;
+}
 
-	&#tw-story {
-		grid-column: 1 / span 8;
+#buttons {
+	display: flex;
+	gap: 1em;
+	flex-wrap: wrap;
+	justify-content: center;
+	grid-template-columns: repeat(3, 1fr);
+	margin: 1.5em auto;
+	left: 4em;
+
+	&.empty {
+		opacity: 0;
+		pointer-events: none;
 	}
+}
 
-	&#tw-input {
-		grid-column: 9 / span 4;
-	}
-
-	@media screen and (max-width: $mobile_bp) {
-		&#tw-story,
-		&#tw-input {
-			grid-column: 1 / span 1;
-		}
-	}
-
-	.titlebar {
-		padding: 0.3em 0.5em;
-		background-color: var(--accent1);
-		color: var(--textDark);
-		display: flex;
-		justify-content: space-between;
-		box-shadow: 0 2px 11px var(--accent1fade);
-
-		&::after {
-			content: "x";
-			height: 100%;
-		}
-	}
-
-	.content {
-		padding: 1em;
-		min-height: 300px;
-
-		hr {
-			width: 50%;
-			border-color: var(--accent1);
-			transform: scaleX(1.25);
-			box-shadow: 0 0 7px var(--accent1fade);
-		}
-
-		&#tw-passage {
-			animation-duration: 750ms;
-			animation-fill-mode: both;
-
-			&.run-anim {
-				animation-name: appear;
-			}
-		}
-	}
-
-	.buttons {
-		display: flex;
-		gap: 1em;
-		flex-wrap: wrap;
-		justify-content: center;
-		grid-template-columns: repeat(3, 1fr);
-		margin: 1.5em auto;
-	}
-
-	.directionals {
-		display: grid;
-		margin: 1.5em auto;
-		grid-template-columns: repeat(3, 1fr);
-		justify-content: center;
-		max-width: 150px;
-	}
-
-	.map {
-		display: flex;
-		justify-content: center;
-		margin: 1.5em auto;
-	}
+#directionals {
+	display: grid;
+	margin: 1.5em auto;
+	grid-template-columns: repeat(3, 1fr);
+	justify-content: center;
+	left: 50%;
+	transform: translate(-50%, 50%);
 
 	button {
-		background-color: var(--background);
-		color: var(--accent1);
-		border: solid 1px var(--accent1);
-		padding: 0.5em 1.5em;
-		border-radius: 0.75em;
-		font-family: monospace;
-		font-size: 1rem;
-		box-shadow: 0 0 5px var(--accent1fade), 0 0 5px inset var(--accent1fade);
-		text-shadow: 0 0 var(--textShadowDepth) currentColor;
-
-		&:hover:not(:disabled) {
-			background-color: var(--accent1);
-			color: var(--textDark);
-			cursor: pointer;
-		}
-
-		&:disabled {
-			border-color: var(--disabled);
-			color: var(--disabled);
-			opacity: 0.5;
-			cursor: not-allowed;
-		}
-
-		&[data-passage-name="empty"] {
-			opacity: 0;
-			pointer-events: none;
-		}
-
 		&.north {
 			grid-column-start: 2;
 		}
@@ -183,11 +145,50 @@ a {
 	}
 }
 
+#map-container {
+	display: flex;
+	justify-content: center;
+	margin: 1.5em auto;
+	right: 4em;
+	position: static;
+	padding: 0;
+
+	&.active {
+		position: absolute;
+	}
+}
+
+#loading-cover {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: var(--background);
+	opacity: 1;
+	transition: opacity 1000ms;
+	z-index: 999;
+
+	&.loaded {
+		opacity: 0;
+		pointer-events: none;
+	}
+}
+
 @keyframes appear {
-	0% {
+	from {
 		opacity: 0;
 	}
-	100% {
+	to {
 		opacity: 1;
+	}
+}
+
+@keyframes reveal {
+	from {
+		transform: scaleX(0);
+	}
+	to {
+		transform: scaleX(1);
 	}
 }
