--- a/tests/test-stories/storycss.scss
+++ b/tests/test-stories/storycss.scss
@@ -1,3 +1,4 @@
+// For ease, I am writing the story css here and copying it manually into the twee, mainly so i get some nice IDE features and sass support
 #interface {
 	&:before,
 	&:after {
