--- a/tests/test-stories/storycss.scss
+++ b/tests/test-stories/storycss.scss
@@ -1,3 +1,8 @@
+:root {
+	--accent_main: #078bd8;
+	--accent_dim: #054266;
+	--accent_fade: rgba(7, 139, 216, 0.4);
+}
 // For ease, I am writing the story css here and copying it manually into the twee, mainly so i get some nice IDE features and sass support
 #interface {
 	&:before,
