--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -91,6 +91,19 @@ button {
 	}
 }
 
+#tw-passage {
+	width: 100%;
+	height: 45vh;
+	border: dotted 1px var(--accent_main);
+	overflow-y: hidden;
+
+	.passage-container {
+		height: 100%;
+		width: 100%;
+		display: inline-block;
+	}
+}
+
 .float-ui {
 	position: absolute;
 	bottom: 0;
