nicer animation and passage spacing, dimming inactive passages, support for custom passage classes

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -96,11 +96,20 @@ button {
 	height: 45vh;
 	border: dotted 1px var(--accent_main);
 	overflow-y: hidden;
+	padding: 1rem;
 
 	.passage-container {
-		height: 100%;
 		width: 100%;
 		display: inline-block;
+		padding: 0 1rem;
+		margin: 1rem 0;
+		border: solid 1px var(--accent_main);
+		box-sizing: border-box;
+		opacity: 0.5;
+
+		&.active {
+			opacity: 1;
+		}
 	}
 }
 
